--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>mule-maven-deployment-demo</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule</packaging>
-	<name>Mule mule-maven-deployment-demo Application</name>
+	<name>testproject</name>
 
 	<parent>
 		<groupId>com.javastreets</groupId>
