--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.javastreets</groupId>
-	<artifactId>mule-maven-deployment-demo</artifactId>
+	<artifactId>testproject</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule</packaging>
 	<name>testproject</name>
